--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.fibbery.cli</groupId>
     <artifactId>rocketmq-cli</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <jline.version>3.6.2</jline.version>
